--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,5 @@
 <body>
   <div class="section" id="app"></div>
   <!-- <script src="bundle.js"></script> -->
-<script src="index.js"></script></body>
+</body>
 </html>
